--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Manad Mishra
 email: manadmishra98@gmail.com
 description: Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
 
-baseurl: "/blog"
+baseurl: "/jekyll-material-theme"
 url: ""
 
 parallax_image_one: assets/images/startup3.jpg # These are the images used for the parallax background
