--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Musica lieta dono divino.
+title: Manad Mishra
 name: Manad Mishra
 email: manadmishra98@gmail.com
 description: Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
@@ -144,8 +144,8 @@ colored: colored # Leave blank for black and white icons
 
 project_button: Github
 
-github: https://github.com/jameshamann/jekyll-material-theme
-medium: https://medium.com
+github: https://github.com/manadmishra
+facebook: https://www.facebook.com/manad.mishra.98
 
 baseurl: # if your site is located at /blog or /home, enter it here, otherwise leave it empty
 url: http://localhost:4000/ #the url of your site
@@ -154,7 +154,7 @@ url: http://localhost:4000/ #the url of your site
 tag_manager_id: # This looks something like GTM-XXXXXXX
 google_analytics_tracking_id: # This looks something like UA-000000000-0 Head over to https://analytics.google.com/ to setup.
 
-cookies_banner: show # The value "show" will show the cookies banner, the value "none" will hide the banner.
+cookies_banner: none # The value "show" will show the cookies banner, the value "none" will hide the banner.
 
 cookie_accept_message: Thanks!
 
