--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ description: Write an awesome description for your new site here. You can edit t
 baseurl: "/jekyll-material-theme"
 url: ""
 
-parallax_image_one: assets/images/startup3.jpg # These are the images used for the parallax background
-parallax_image_two: assets/images/startup3.jpg
+parallax_image_one: assets/images/cover.jpg # These are the images used for the parallax background
+parallax_image_two: assets/images/cover.jpg
 
 project_one: "First Project"
 project_one_description: Describe your project!
